...
              <Ionicons
                name="arrow-back"
                size={27}
                color={Colors.textPrimary}
              />
            </Pressable>
            <ThemedText variant="title">New Activity</ThemedText>
          </View>

          <FormProvider {...form}>
            <ActivityNameField />
            <ActivityTickerField />
            <ActivityIntervalField />
...
          <Button
            testID="create-activity-submit-button"
            isLoading={createActivity.isPending}
            style={styles.submitButton}
            onPress={form.handleSubmit(handleSubmit)}
          >
            Create
          </Button>
        </KeyboardAvoidingView>
      </ScrollView>

      <DiscardChangesModal
        visible={leaveGuard.isConfirmVisible}
...
