...
      <Background />

      <ScrollView>
        <Container style={styles.scrollContent}>
          <View>
            <ThemedText style={styles.title} variant="heading" font="system">
              Monitor Your Frequency
            </ThemedText>
          </View>

          {goals.length === 0 ? (
            <ListItemShell style={styles.emptyShell}>
              <ThemedText variant="bodySmall" style={styles.emptyText}>
...
