appId: com.codecompletelabs.kadence.preview
env:
  TEST_EMAIL: ${TEST_EMAIL || "test@kadence.dev"}
  TEST_PASSWORD: ${TEST_PASSWORD || "testpassword123"}

---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Login!"
    file: subflows/login.yaml
- assertVisible: "Activities Center"
- runFlow: subflows/open-profile.yaml
- tapOn: "Logout"
- assertVisible: "Login!"
